add third line feature2

--- a/hello.html
+++ b/hello.html
@@ -6,5 +6,6 @@
   <body>
     hello, world! hello again, hello third time!
     here is the feature!!!
+    heare is feature 2!!
   </body>
 </html>
